--- a/react-frontend/package.json
+++ b/react-frontend/package.json
@@ -40,5 +40,8 @@
       "last 1 safari version"
     ]
   },
-  "packageManager": "yarn@3.6.3"
+  "packageManager": "yarn@3.6.3",
+  "devDependencies": {
+    "tailwindcss": "^3.3.3"
+  }
 }
