--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,6 +26,7 @@ services:
     restart: on-failure
     environment:
       - SPRING_DATASOURCE_URL=jdbc:mysql://mysql:3306/db
+    profiles: ["api"]
 
 volumes:
   my-db:
